--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <span id="pluto"></span>
     <script src="./js/main.js"></script>
   </body>
 </html>
